# sozu-traffic-generator

./: .gitignore  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  example.config.toml
src/: main.rs
src/svc/: config.rs  mod.rs
src/svc/messaging/: generator.rs  mod.rs  requests.rs
