[package]
name = "sozu-traffic-generator"
description = "This application retrieve pki in a directory and load them into Sōzu"
homepage = "https://github.com/Keksoj/sozu-traffic-generator"
documentation = "https://github.com/Keksoj/sozu-traffic-generator/blob/main/README.md"
version = "0.1.0"
rust-version = "1.66.1"
edition = "2021"
license-file = "LICENSE"
authors = ["Emmanuel Bosquet <emmanuel.bosquet@clever-cloud.com>"]

[dependencies]
axum = { version = "^0.6.19", features = ["tokio"] }
clap = { version = "^4.3.19", features = ["derive"] }
config = "^0.13.3"
futures = "^0.3.28"
hyper = { version = "^0.14.27", default-features = false, features = ["http1", "server"] }
mime = "^0.3.17"
once_cell = "^1.17.1"
paw = "^1.0.0"
prometheus = "^0.13.3"
rand = "^0.8.5"
sentry = { version = "^0.31.5", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-tracing = "^0.31.5"
serde = { version = "^1.0.175", features = ["derive"] }
serde_json = "^1.0.103"
sozu-client = "^0.3.1"
sozu-command-lib = "^0.15.15"
thiserror = "^1.0.44"
tokio = { version = "^1.29.1", features = ["macros", "rt", "signal"] }
tracing = "^0.1.37"
tracing-subscriber = "^0.3.17"
x509-parser = "^0.15.0"
